--- a/mapping-filtering/Map-Filter-Arrays.html
+++ b/mapping-filtering/Map-Filter-Arrays.html
@@ -66,7 +66,7 @@
           ></div>
           <div class="row d-flex">
             <h1 class="description-text">
-              Filter than map only the ages above 18 (int)
+              Filter then map only the ages above 18 (int)
             </h1>
           </div>
           <div
